bugfix: img not showing in post details

--- a/styles/after-party.css
+++ b/styles/after-party.css
@@ -1,3 +1,27 @@
 #after-party {
     margin-top: 10rem;
 }
+
+.party-flyer {
+    width: 100%;
+    max-width: 780px;
+    height: auto;
+
+}
+
+.flyer-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 7rem 0;
+}
+
+.text-wrapper p {
+    margin: 0;
+    font-size: 1.5rem;
+    width: 100%;
+}
+
+.page-title {
+    width: 100%;
+}
